# MyTopOpt

./: .gitignore  CMakeLists.txt  README.md  makefile  plot.py
data/: topopt_1.txt  topopt_10.txt  topopt_11.txt  topopt_12.txt  topopt_13.txt  topopt_14.txt  topopt_15.txt  topopt_16.txt  topopt_17.txt  topopt_18.txt  topopt_19.txt  topopt_2.txt  topopt_20.txt  topopt_21.txt  topopt_22.txt  topopt_23.txt  topopt_24.txt  topopt_25.txt  topopt_26.txt  topopt_27.txt  topopt_28.txt  topopt_29.txt  topopt_3.txt  topopt_30.txt  topopt_31.txt  topopt_32.txt  topopt_33.txt  topopt_34.txt  topopt_35.txt  topopt_36.txt  topopt_37.txt  topopt_38.txt  topopt_39.txt  topopt_4.txt  topopt_40.txt  topopt_41.txt  topopt_42.txt  topopt_43.txt  topopt_44.txt  topopt_45.txt  (+32 more)
include/: FiniteElement.h  Topopt.h  filter.h  mma.h  topopt.h
src/: CMakeLists.txt  FiniteElement.cpp  Topopt.cpp  filter.cpp  main.cpp  mma.cpp  topopt.cpp
